76. Renaming Project and solving Issues (đổi tên dự án, và nạp lại các dependencies project cho dự án cho khớp và chỉnh lại link css cho đúng, ở file layout)

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -10,3 +10,4 @@
     "DefaultConnection": "Server=.;Database=Bulky3;Trusted_Connection=True;TrustServerCertificate=True"
   }
   }
+// 76. đổi tên dự án
