86. Add Foreign Key in EF Core (CategoryId) (thêm khoá ngoại CategoryId cho bảng Product)

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Bulky3;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MAYTINH;Database=Bulky;User ID=sa;Password=dminh318@;TrustServerCertificate=True"
   }
   }
 // 76. đổi tên dự án
