111. Scaffold Identity (cấu hình để tự sinh ra identity có sẵn của .net)

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MAYTINH;Database=Bulky;User ID=sa;Password=dminh318@;TrustServerCertificate=True"
+    "DefaultConnection": "Server=MAYTINH;Database=Bulky;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-  }
-// 76. đổi tên dự án
+}
