--- a/BulkyWeb/appsettings.Production.json
+++ b/BulkyWeb/appsettings.Production.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MAYTINH;Database=Bulky1;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
-    "DefaultConnection": "Server=tcp:bulkymin.database.windows.net,1433;Initial Catalog=bulky;Persist Security Info=False;User ID=sqladmin;Password=Admin123*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server=tcp:bulkymin.database.windows.net,1433;Initial Catalog=bulky;Persist Security Info=False;User ID=sqladmin;Password=admin123*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Stripe": {
