201. Corrupted Migrations and Next Steps (xử lý trường hợp lỗi khi migration)

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MAYTINH;Database=Bulky1;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
+    //"DefaultConnection": "Server=MAYTINH;Database=BulkyNew;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
     "DefaultConnection": "Server=MAYTINH;Database=Bulky;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
