--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=MAYTINH;Database=Bulky1;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
     //"DefaultConnection": "Server=MAYTINH;Database=BulkyNew;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
-    "DefaultConnection": "Server=MAYTINH;Database=BulkyNew;User ID=sa;Password=dminh318@;TrustServerCertificate=True",
+    "DefaultConnection": "Server=MAYTINH;Database=BulkyNew;User ID=sa;Password=dminh318;TrustServerCertificate=True",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Stripe": {
